# xdk2mam

http-streams/: Cargo.toml  README.md  config.json  keystore.json
http-streams/examples/: subscriber.rs  subscriber_public_only.rs
http-streams/src/: lib.rs  main.rs  stream_server.rs
http-streams/src/api/: errors.rs  handlers.rs
http-streams/src/iota_channels_lite/: mod.rs
http-streams/src/iota_channels_lite/channels_lite/: channel_author.rs  channel_subscriber.rs  mod.rs
http-streams/src/iota_channels_lite/utils/: payload.rs
http-streams/src/responses/: response_message.rs
http-streams/src/security/: api_key_author.rs  api_key_subscriber.rs  keystore.json  keystore.rs
http-streams/src/types/: config.rs  mod.rs
